2006-02-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh (del): Remove.  Use erase (),
	update callers.

	* flower/include/array.hh (begin, end): Add.
	(del, get): Remove.

2006-02-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/lily-guile-macros.hh (MAKE_SCHEME_CALLBACK): use
	std::string not String. 

	* lily/context-def.cc (path_to_acceptable_context): use INT_MAX
	iso UINT_MAX.

	* lily/prob.cc (Prob): copy type_ too.

	* lily/lily-guile.cc (mangle_cxx_identifier): new
	function. Class_bla::foo_bar_[px] ->
	ly:class-bla::foo-bar[?!]. Changes throughout

2006-01-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/guile-compatibility.hh (scm_from_unsigned): add scm_from_unsigned().

	* lily/beam.cc (calc_direction): take dir from visible stem in
	degenerate case.

2006-01-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/melody-spanner.cc (spanner::calc_neutral_stem_direction):
	Fix -1, >=0 boundary checks for unsigned vsize.

	* lily/separating-group-spanner.cc (spanner::find_rods): Fix >=0
	loop for unsigned vsize.

	* configure.in (--enable-std-vector): New option.
	(--enable-std-string): On by default.

	* flower/include/std-vector.hh: New file.  Enable switch to
	std::vector, update client code.

2006-01-30  Graham Percival  <gpermus@gmail.com>

	* scm/document-translation.scm: clarify "this context is also
	known as".  Thanks, Werner!

	* Documentation/user/putting.itely: small fixes from Don Blaheta.

	* Documentation/user/invoking.itely: small fix from Don.

2006-01-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (define-scheme-options): rename option
	preview-include-book-title to book-title-preview
	(define-scheme-options): move force-eps-font-include (from paper
	block) to eps-font-include -d option.

	* VERSION (PATCH_LEVEL): release 2.7.30

	* input/bach-schenker.ly (staffPiano): new file.

	* buildscripts/pfx2ttf.fontforge: remove No. glyph from TTF file.
