@@ -1,8 +1,3 @@
-# title	   top level makefile for FlowerLib
-# file	   flower/Makefile
-
-# should reinstate versioning if shared libs are enabled.
-
 depth = ..
 
 NAME = flower
@@ -12,12 +7,6 @@ SUBDIRS = include
 SCRIPTS = 
 README_FILES = NEWS-1.0 NEWS-1.1.46 README TODO
 EXTRA_DIST_FILES= VERSION $(README_FILES) $(SCRIPTS)
-STEPMAKE_TEMPLATES=library c++ po
-
-
+STEPMAKE_TEMPLATES=library c++ po test
 
 include $(depth)/make/stepmake.make 
-
-foo:
-	echo $(DIST_FILES) $(O_FILES) $(OBJECT_FILES)
-
