@@ -1,0 +1,6 @@
+.PHONY: check test
+
+check: test
+
+test: $(TEST_EXECUTABLE)
+	$(TEST_EXECUTABLE)
