@@ -1,5 +1,9 @@
 2006-02-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* flower/test-std.cc: Add simple unit test for vector migration.
+
+	* stepmake/stepmake/test*: Unit test support.
+
 	* flower/include/std-vector.hh (del): Remove.  Use erase (),
 	update callers.
 
